tests/transpiler/x/scala/group_by_join.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/group_by_join.scala:11: error: ';' expected but ')' found.
    val stats: ArrayBuffer[Any] = ArrayBuffer((for (o <- orders; c <- customers if (o.customerId == c.id)) yield (c.name, Map("o" -> o, "c" -> c))).toSeq: _*).groupBy(_._1).map{ case (k, arr) => Map("key" -> k, "items" -> ArrayBuffer(arr.map(_._2).toSeq: _*)) }.map(g => Map("name" -> g("key"), "count" -> g("items").size)))
                                                                                                                                                                                                                                                                                                                                   ^
one error found
