tests/transpiler/x/scala/group_by_join.scala
// Generated by Mochi v0.10.35 on 2025-07-22 16:36:32 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  case class Item(id: Int, name: String)
  
  case class Item1(id: Int, customerId: Int)
  
  def main(args: Array[String]): Unit = {
    val customers: ArrayBuffer[Item] = ArrayBuffer(Item(1, "Alice"), Item(2, "Bob"))
    val orders: ArrayBuffer[Item1] = ArrayBuffer(Item1(100, 1), Item1(101, 1), Item1(102, 2))
    val stats: ArrayBuffer[Any] = ArrayBuffer((for (o <- orders; c <- customers if (o.customerId == c.id)) yield (c.name, Map("o" -> o, "c" -> c))).toSeq: _*).groupBy(_._1).map{ case (k, arr) => Map("key" -> k, "items" -> ArrayBuffer(arr.map(_._2).toSeq: _*)) }.map(g => Map("name" -> g("key"), "count" -> g("items").size)))
    println("--- Orders per customer ---")
    for (s <- stats) {
      println(List(s.name, "orders:", s.count).mkString(" "))
    }
  }
}
